update: fixed auto zooming on iPhones

--- a/css/styles_index.css
+++ b/css/styles_index.css
@@ -1,7 +1,10 @@
 /* -------------------- General -------------------- */
 body {
   margin: 0;
+  padding: 0;
   background-color: #EFF0F2;
+  font-size: 16px;
+  color: #555;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -43,7 +46,6 @@ header > p,
 footer > p {
   margin: 0;
   font-size: 20px;
-  /* color: ; */
   text-align: center;
 }
 
@@ -55,14 +57,14 @@ footer > p {
 
 #main_form > p:first-child {
   margin: 32px 0 0;
+  border-bottom: 1px solid #555;
   font-size: 20px;
   font-weight: bold;
-  border-bottom: 1px solid #555;
   color: #022044;
 }
 img {
-  margin: 0 0 -4px 0;
   float: right;
+  margin: 0 0 -4px 0;
   width: 28px;
   height: auto;
 }
@@ -75,22 +77,20 @@ img {
 
 #main_form .label {
   margin: 40px 0 0;
-  font-size: 12px;
-  color: #555;
+  font-size: 14px;
 }
 #main_form .label.req::after {
-/* 099CEC, EEF9FF */
+  content: '必須';
   position: relative;
   left: 4px;
   bottom: 1px;
   padding: 0 2px;
-  border-radius: 4px;
+  background-color: #FFF4E1;
   border: 1px solid #ED8D49;
-  content: '必須';
+  border-radius: 4px;
   font-size: 8px;
   font-weight: bold;
   color: #ED8D49;
-  background-color: #FFF4E1;
 }
 #main_form .input {
   position: relative;
@@ -100,11 +100,9 @@ img {
 #main_form ul.input {
   list-style: none;
   padding-left: 8px;
-  font-size: 16px;
 }
 #main_form .confirm {
   margin: 0.5rem 0 0;
-  font-size: 14px;
   font-weight: bold;
   color: #022044;
 }
@@ -114,6 +112,7 @@ img {
   box-sizing: border-box;
   width: 100%;
   max-width: 400px;
+  font-size:16px;
 }
 #main_form #birthday {
   position: absolute;
@@ -126,21 +125,26 @@ img {
   width: 100%;
   height: 72px;
   max-width: 400px;
+  font-size:16px;
 }
 #main_form input[type="radio"] {
   margin: 8px 8px 0 0;
 }
 #main_form input[type="radio"]~label {
-  font-size: 12px;
-  color: #555;
+  font-size: 14px;
+}
+#main_form select {
+  padding: 6px 8px;
+  box-sizing: border-box;
+  font-size: 16px;
 }
 
 /* -----------(START) max-width of input fields ------------ */
 #year {
-  max-width: 74px;
+  max-width: 80px;
 }
 #month, #date {
-  max-width: 54px;
+  max-width: 60px;
 }
 #pref {
   max-width: 120px;
@@ -151,10 +155,8 @@ img {
 }
 /* -----------(END) max-width of input fields ------------ */
 
-#main_form select {
-  padding: 6px 8px;
-  box-sizing: border-box;
-}
+/* -----------(START) style related with error ------------ */
+
 #main_form .error_box {
   margin: 4px 0 0;
 }
@@ -171,6 +173,9 @@ img {
   left: 72px;
 }
 
+/* -----------(END) style related with error ------------ */
+
+/* -----------(START) レスポンシブル関連 ------------ */
 
 @media screen and (min-width: 576px) {
   .field_wrapper {
@@ -184,8 +189,9 @@ img {
 header > p,
 footer > p {
   font-size: 28px;
-  /* color: ; */
   text-align: center;
 }
 }
+
+/* -----------(END) レスポンシブル関連 ------------ */
 
